# TranslucentSM-Legacy-Reborn

./: .gitignore  NuGet.Config  README.md  index.html  script.js  start.sln  styles.css
.github/: workflow.error
.github/workflows/: Release-Windows.yml  alpha.yml  autorelease.yml  ci-cd.yml  cmake-Windows-platform.yml  cmake-multi-platform.yml  iflow-docs.yml  iflow-issue.yml  iflow-pr-audit.yml  manual-release.yml  nightly-build.yml  nightly.yml  schedule-generate.yml
.trae/documents/: TranslucentSM 项目全面优化计划.md  plan_20260109_123542.md  集成iFlow GitHub Action.md
TranslucentSM/: TranslucentSM.cpp
installer/: TranslucentSM.iss
readme/: README.md
src/: CMakeLists.txt  Cmake.ps1  MainWindow.cpp  MainWindow.h  TranslucentSM.cpp  TranslucentSM.h  TranslucentSMDLL.cpp  installer.cpp  installer.h  main.c  main.cpp  translucentsm.c  translucentsmdll.c
src/StartTAP/: CMakeLists.txt  Resource.rc  StartTAP.vcxproj  VisualTreeWatcher.cpp  VisualTreeWatcher.h  dllmain.cpp  exports.def  framework.h  helpers.h  misc.cpp  misc.h
src/translations/: translucentsm_en_US.ts  translucentsm_zh_CN.ts
